sumo/tests/sumo/errors/network/junction/root__junction#type__empty2/errors.sumo
Error: An unknown or invalid junction type occured: '' on junction '2'.
 Can not build according junction.
Quitting (on error).
